--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,14 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
+*.egg-info/
 
 .venv/*
 
 .DS_Store
+
+/build/
+/dist/
 
 # Ignore vscode settings
 .vscode/*
