--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "climberpy"
-version = "0.0.1"
+version = "0.0.3"
 authors = [
     { name = "Bryce Parry", email = "mindofbp@gmail.com" }
 ]
@@ -19,6 +19,7 @@ classifiers = [
 dependencies = [
     "fitdecode",
     "pycairo",
+    "CairoSVG",
     "Click",
 ]
 
